...
                            <constraint firstItem="Ew1-tK-dyS" firstAttribute="height" secondItem="Ya5-y7-S8J" secondAttribute="height" constant="-866" id="t8B-et-3sp"/>
                            <constraint firstItem="HOl-4G-mIt" firstAttribute="leading" secondItem="Ya5-y7-S8J" secondAttribute="leading" constant="20" id="vlR-rG-55h"/>
                            <constraint firstItem="azo-Cs-oSE" firstAttribute="top" secondItem="Ya5-y7-S8J" secondAttribute="top" constant="338" id="wc2-a5-Job"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Detalles" id="Uf0-Bq-DKq">
                        <barButtonItem key="backBarButtonItem" title="Recolecciones" id="dLz-UI-aJl"/>
                    </navigationItem>
                    <connections>
                        <outlet property="almacenLabel" destination="dPU-PY-LuO" id="bf7-Np-9Aq"/>
                        <outlet property="donadorLabel" destination="xhI-5B-Qtu" id="Ljh-0m-og7"/>
                        <outlet property="fechaRecoleccionLabel" destination="M2V-Bb-GeZ" id="VJb-Fi-wm7"/>
                        <outlet property="pesoDonacionLabel" destination="xjF-1b-5O8" id="ymT-xn-vQj"/>
...
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nR5-UI-Dzl" userLabel="Row3">
                                        <rect key="frame" x="0.0" y="322.5" width="352" height="174"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="v0Q-2M-as4">
                                                <rect key="frame" x="0.0" y="20" width="352" height="87"/>
                                                <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
                                                <state key="normal" title="Chofer"/>
                                                <connections>
                                                    <action selector="onGoButtonDriver:" destination="060-iL-7X7" eventType="touchUpInside" id="Wpb-P4-4WU"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
...
